--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ body > div {
   display: flex;
 }
 
+p {
+  padding: 0;
+  margin-left: 4px;
+}
+
+
 
     #board {
       padding: 3px;
@@ -89,3 +95,40 @@ body > div {
           .colored{
             background-color: yellow;
           }
+
+          .sliderContainer {
+            display: flex;
+            align-items: center;
+            color: white
+          }
+
+            .slider {
+              -webkit-appearance: none;
+              width: 100%;
+              height: 15px;
+              background: rgb(64, 98, 119);
+              outline: none;
+              opacity: 1.0;
+              -webkit-transition: 0.2s;
+              transition: opacity 0.2s;
+              border-radius: 12px;
+              box-shadow: 0px 1px 10px 1px black;
+            }
+
+            .slider::-webkit-slider-thumb {
+              -webkit-appearance: none;
+              appearance: none;
+              width: 25px;
+              height: 25px;
+              background: rgb(136, 182, 45);
+              border-radius: 50%;
+              opacity: 1.0;
+            }
+
+            .slider::-moz-range-thumb {
+              width: 25px;
+              height: 25px;
+              background: rgb(136, 182, 45);
+              border-radius: 50%;
+              opacity: 1.0;
+            }
